--- a/Tutorials/Boston Housing - XGBoost (Deploy) - High Level.ipynb
+++ b/Tutorials/Boston Housing - XGBoost (Deploy) - High Level.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,9 +208,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'get_image_uri' method will be deprecated in favor of 'ImageURIProvider' class in SageMaker Python SDK v2.\n",
+      "WARNING:root:There is a more up to date SageMaker XGBoost image. To use the newer image, please set 'repo_version'='1.0-1'. For example:\n",
+      "\tget_image_uri(region, 'xgboost', '1.0-1').\n",
+      "WARNING:root:Parameter image_name will be renamed to image_uri in SageMaker Python SDK v2.\n"
+     ]
+    }
+   ],
    "source": [
     "# As stated above, we use this utility method to construct the image name for the training container.\n",
     "container = get_image_uri(session.boto_region_name, 'xgboost')\n",
@@ -234,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,9 +268,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:sagemaker:'s3_input' class will be renamed to 'TrainingInput' in SageMaker Python SDK v2.\n",
+      "WARNING:sagemaker:'s3_input' class will be renamed to 'TrainingInput' in SageMaker Python SDK v2.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020-07-16 11:53:24 Starting - Starting the training job...\n",
+      "2020-07-16 11:53:27 Starting - Launching requested ML instances......\n",
+      "2020-07-16 11:54:44 Starting - Preparing the instances for training......\n",
+      "2020-07-16 11:55:53 Downloading - Downloading input data\n",
+      "2020-07-16 11:55:53 Training - Downloading the training image...\n",
+      "2020-07-16 11:56:25 Uploading - Uploading generated training model\n",
+      "2020-07-16 11:56:25 Completed - Training job completed\n",
+      "\u001b[34mArguments: train\u001b[0m\n",
+      "\u001b[34m[2020-07-16:11:56:13:INFO] Running standalone xgboost training.\u001b[0m\n",
+      "\u001b[34m[2020-07-16:11:56:13:INFO] File size need to be processed in the node: 0.02mb. Available memory size in the node: 8478.65mb\u001b[0m\n",
+      "\u001b[34m[2020-07-16:11:56:13:INFO] Determined delimiter of CSV input is ','\u001b[0m\n",
+      "\u001b[34m[11:56:13] S3DistributionType set as FullyReplicated\u001b[0m\n",
+      "\u001b[34m[11:56:13] 227x13 matrix with 2951 entries loaded from /opt/ml/input/data/train?format=csv&label_column=0&delimiter=,\u001b[0m\n",
+      "\u001b[34m[2020-07-16:11:56:13:INFO] Determined delimiter of CSV input is ','\u001b[0m\n",
+      "\u001b[34m[11:56:13] S3DistributionType set as FullyReplicated\u001b[0m\n",
+      "\u001b[34m[11:56:13] 112x13 matrix with 1456 entries loaded from /opt/ml/input/data/validation?format=csv&label_column=0&delimiter=,\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 10 extra nodes, 0 pruned nodes, max_depth=4\u001b[0m\n",
+      "\u001b[34m[0]#011train-rmse:19.6154#011validation-rmse:19.7591\u001b[0m\n",
+      "\u001b[34mMultiple eval metrics have been passed: 'validation-rmse' will be used for early stopping.\n",
+      "\u001b[0m\n",
+      "\u001b[34mWill train until validation-rmse hasn't improved in 10 rounds.\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 8 extra nodes, 0 pruned nodes, max_depth=3\u001b[0m\n",
+      "\u001b[34m[1]#011train-rmse:16.0581#011validation-rmse:16.3885\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 10 extra nodes, 2 pruned nodes, max_depth=3\u001b[0m\n",
+      "\u001b[34m[2]#011train-rmse:13.1633#011validation-rmse:13.7321\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 14 extra nodes, 0 pruned nodes, max_depth=4\u001b[0m\n",
+      "\u001b[34m[3]#011train-rmse:10.8646#011validation-rmse:11.6107\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 12 extra nodes, 0 pruned nodes, max_depth=4\u001b[0m\n",
+      "\u001b[34m[4]#011train-rmse:8.97372#011validation-rmse:9.94979\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 20 extra nodes, 2 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[5]#011train-rmse:7.54422#011validation-rmse:8.74096\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 18 extra nodes, 4 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[6]#011train-rmse:6.30159#011validation-rmse:7.62383\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 24 extra nodes, 2 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[7]#011train-rmse:5.35959#011validation-rmse:6.83075\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 22 extra nodes, 2 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[8]#011train-rmse:4.61309#011validation-rmse:6.19981\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 24 extra nodes, 2 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[9]#011train-rmse:3.99553#011validation-rmse:5.70344\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 22 extra nodes, 4 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[10]#011train-rmse:3.54295#011validation-rmse:5.38255\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 18 extra nodes, 2 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[11]#011train-rmse:3.17578#011validation-rmse:5.07109\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 28 extra nodes, 2 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[12]#011train-rmse:2.88717#011validation-rmse:4.9031\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 16 extra nodes, 0 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[13]#011train-rmse:2.68596#011validation-rmse:4.7461\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 14 extra nodes, 2 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[14]#011train-rmse:2.52046#011validation-rmse:4.59982\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 20 extra nodes, 0 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[15]#011train-rmse:2.39152#011validation-rmse:4.54297\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 18 extra nodes, 2 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[16]#011train-rmse:2.27388#011validation-rmse:4.44141\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 14 extra nodes, 0 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[17]#011train-rmse:2.19149#011validation-rmse:4.36561\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 16 extra nodes, 2 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[18]#011train-rmse:2.1068#011validation-rmse:4.30136\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 10 extra nodes, 2 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[19]#011train-rmse:2.06523#011validation-rmse:4.27023\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 14 extra nodes, 2 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[20]#011train-rmse:2.01155#011validation-rmse:4.20715\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 14 extra nodes, 0 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[21]#011train-rmse:1.96912#011validation-rmse:4.12315\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 14 extra nodes, 0 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[22]#011train-rmse:1.93097#011validation-rmse:4.08437\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 20 extra nodes, 8 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[23]#011train-rmse:1.87853#011validation-rmse:4.07965\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 20 extra nodes, 2 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[24]#011train-rmse:1.80092#011validation-rmse:4.01266\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 20 extra nodes, 0 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[25]#011train-rmse:1.75764#011validation-rmse:3.98067\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 36 extra nodes, 2 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[26]#011train-rmse:1.68673#011validation-rmse:3.92485\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 26 extra nodes, 2 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[27]#011train-rmse:1.62668#011validation-rmse:3.92202\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 16 extra nodes, 0 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[28]#011train-rmse:1.58697#011validation-rmse:3.89215\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 10 extra nodes, 0 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[29]#011train-rmse:1.5732#011validation-rmse:3.90804\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 18 extra nodes, 2 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[30]#011train-rmse:1.53871#011validation-rmse:3.91203\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 16 extra nodes, 2 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[31]#011train-rmse:1.5033#011validation-rmse:3.86123\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 18 extra nodes, 4 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[32]#011train-rmse:1.46799#011validation-rmse:3.83426\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 16 extra nodes, 2 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[33]#011train-rmse:1.43991#011validation-rmse:3.83693\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 10 extra nodes, 0 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[34]#011train-rmse:1.41516#011validation-rmse:3.85147\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 16 extra nodes, 2 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[35]#011train-rmse:1.37656#011validation-rmse:3.81934\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 12 extra nodes, 0 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[36]#011train-rmse:1.35598#011validation-rmse:3.83546\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 14 extra nodes, 2 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[37]#011train-rmse:1.32759#011validation-rmse:3.83111\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 10 extra nodes, 4 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[38]#011train-rmse:1.31579#011validation-rmse:3.80719\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 12 extra nodes, 10 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[39]#011train-rmse:1.29898#011validation-rmse:3.79552\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 16 extra nodes, 8 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[40]#011train-rmse:1.25533#011validation-rmse:3.8108\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 10 extra nodes, 8 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[41]#011train-rmse:1.2462#011validation-rmse:3.82318\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 8 extra nodes, 8 pruned nodes, max_depth=4\u001b[0m\n",
+      "\u001b[34m[42]#011train-rmse:1.23757#011validation-rmse:3.82212\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 16 extra nodes, 12 pruned nodes, max_depth=4\u001b[0m\n",
+      "\u001b[34m[43]#011train-rmse:1.19142#011validation-rmse:3.83205\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 8 extra nodes, 6 pruned nodes, max_depth=4\u001b[0m\n",
+      "\u001b[34m[44]#011train-rmse:1.18441#011validation-rmse:3.82867\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 8 extra nodes, 2 pruned nodes, max_depth=4\u001b[0m\n",
+      "\u001b[34m[45]#011train-rmse:1.17353#011validation-rmse:3.832\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 10 extra nodes, 2 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[46]#011train-rmse:1.16478#011validation-rmse:3.82662\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 20 extra nodes, 4 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[47]#011train-rmse:1.13277#011validation-rmse:3.83463\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 4 extra nodes, 6 pruned nodes, max_depth=2\u001b[0m\n",
+      "\u001b[34m[48]#011train-rmse:1.12599#011validation-rmse:3.81573\u001b[0m\n",
+      "\u001b[34m[11:56:13] src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 12 extra nodes, 8 pruned nodes, max_depth=5\u001b[0m\n",
+      "\u001b[34m[49]#011train-rmse:1.11254#011validation-rmse:3.81591\u001b[0m\n",
+      "\u001b[34mStopping. Best iteration:\u001b[0m\n",
+      "\u001b[34m[39]#011train-rmse:1.29898#011validation-rmse:3.79552\n",
+      "\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training seconds: 48\n",
+      "Billable seconds: 48\n"
+     ]
+    }
+   ],
    "source": [
     "# This is a wrapper around the location of our train and validation data, to make sure that SageMaker\n",
     "# knows our data is in csv format.\n",
@@ -291,7 +447,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:sagemaker:Parameter image will be renamed to image_uri in SageMaker Python SDK v2.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------"
+     ]
+    }
+   ],
    "source": [
     "xgb_predictor = xgb.deploy(initial_instance_count=1, instance_type='ml.m4.xlarge')"
    ]
@@ -404,7 +575,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
