--- a/ML - Study/Project_Plagiarism_Detection/2_Plagiarism_Feature_Engineering.ipynb
+++ b/ML - Study/Project_Plagiarism_Detection/2_Plagiarism_Feature_Engineering.ipynb
@@ -1402,7 +1402,9 @@
    "metadata": {},
    "source": [
     "**Answer:**\n",
-    "The row text is not categorical or numerical values, so we cannot use text as a feature. So we derive Containment from the text to use as a feature of model. We have to use same features for testing the model as we use to train the model. So, calculate containment feature does not related to training and testing, it's part of creating new feature for the building model with better accuracy. "
+    "The row text is not categorical or numerical values, so we cannot use text as a feature. So we derive Containment from the text to use as a feature of model. We have to use same features for testing the model as we use to train the model. So, calculate containment feature does not related to training and testing, it's part of creating new feature for the building model with better accuracy. \n",
+    "\n",
+    "And It's not dependent on answer text and source text, so it's independent to row text data"
    ]
   },
   {
