--- a/ML - Study/Project_Plagiarism_Detection/2_Plagiarism_Feature_Engineering.ipynb
+++ b/ML - Study/Project_Plagiarism_Detection/2_Plagiarism_Feature_Engineering.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "4  g0pA_taske.txt    e      non"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
        "4  g0pA_taske.txt    e         0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
        "[100 rows x 4 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +662,7 @@
        "9  g0pB_taske.txt    e         1      1"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +767,7 @@
        "4  g0pA_taske.txt    e         0      0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +905,7 @@
        "4  dynamic programming is an algorithm design tec...  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -923,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1119,7 +1119,7 @@
        "9  dynamic programming is a method for solving ma...     test  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1216,7 @@
        "Name: Task, dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1237,7 +1237,7 @@
        "Name: Text, dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1248,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1260,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1277,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1328,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1369,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1500,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1548,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1587,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1617,7 +1617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1681,7 +1681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1723,7 +1723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1775,7 +1775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1834,7 +1834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2009,7 +2009,7 @@
        "9  0.597458  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2034,7 +2034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2212,7 +2212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2221,7 +2221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2497,7 +2497,7 @@
        "[100 rows x 14 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2508,7 +2508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2614,7 +2614,7 @@
        "[100 rows x 2 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2625,7 +2625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2637,7 +2637,7 @@
        "       1, 1, 1, 0])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2648,7 +2648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2726,7 +2726,7 @@
        "       [0.3612565445026178, 0.16176470588235295, 'train']], dtype=object)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2737,7 +2737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2776,7 +2776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2812,7 +2812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2823,23 +2823,23 @@
       "Test size:  25\n",
       "\n",
       "Training df sample: \n",
-      " [[0.39814815 0.07906977 0.00934579 0.         0.         0.19178082]\n",
-      " [0.86936937 0.71945701 0.61363636 0.51598174 0.44954128 0.84649123]\n",
-      " [0.59358289 0.2688172  0.15675676 0.10869565 0.08196721 0.31606218]\n",
-      " [0.54450262 0.11578947 0.03174603 0.00531915 0.         0.24257426]\n",
-      " [0.32950192 0.05384615 0.00772201 0.00387597 0.         0.16117216]\n",
-      " [0.59030837 0.15044248 0.03555556 0.00446429 0.         0.30165289]\n",
-      " [0.75977654 0.50561798 0.39548023 0.30681818 0.24571429 0.48430493]\n",
-      " [0.51612903 0.07027027 0.         0.         0.         0.27083333]\n",
-      " [0.44086022 0.11891892 0.02717391 0.00546448 0.         0.22395833]\n",
-      " [0.97945205 0.91724138 0.875      0.83216783 0.78873239 0.9       ]]\n"
+      " [[0.39814815 0.00934579 0.         0.19178082]\n",
+      " [0.86936937 0.61363636 0.31944444 0.84649123]\n",
+      " [0.59358289 0.15675676 0.0441989  0.31606218]\n",
+      " [0.54450262 0.03174603 0.         0.24257426]\n",
+      " [0.32950192 0.00772201 0.         0.16117216]\n",
+      " [0.59030837 0.03555556 0.         0.30165289]\n",
+      " [0.75977654 0.39548023 0.15028902 0.48430493]\n",
+      " [0.51612903 0.         0.         0.27083333]\n",
+      " [0.44086022 0.02717391 0.         0.22395833]\n",
+      " [0.97945205 0.875      0.7        0.9       ]]\n"
      ]
     }
    ],
    "source": [
     "# Select your list of features, this should be column names from features_df\n",
     "# ex. ['c_1', 'lcs_word']\n",
-    "selected_features = ['c_1','c_2','c_3','c_4', 'c_5', 'lcs_word']\n",
+    "selected_features = ['c_1','c_3', 'c_7', 'lcs_word']\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -2868,7 +2868,9 @@
    "metadata": {},
    "source": [
     "**Answer:**\n",
-    "After looking into Correlated Features output we see that till c_5 the feature are not so correlated, after that it's correlated."
+    "After looking into Correlated Features output we see that:\n",
+    "- c_2, c_3, c_4 and c_5 is highly correlated, but not much between c_6, c_7 and so on - So we choose c_1 and c_3.\n",
+    "- As c_6 and c_7 is not much highly correlated, we choose c_7 as another feature. "
    ]
   },
   {
@@ -2895,7 +2897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2929,7 +2931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2966,7 +2968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2983,7 +2985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
